Add Admin User List and Details management templates
Introduce templates for managing user data in the admin panel. The `adminUsersList.ftlh` displays a list of users with filtering options, while `adminUserDetails.ftlh` shows individual user details. Both enhance the admin's ability to manage user information efficiently.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,5 @@
 server:
-  port: ${SERVER_PORT}
-  servlet:
-    context-path: ${SERVER_CONTEXT_PATH}
+  port: 8080
 
 spring:
   application:
@@ -27,5 +25,5 @@ spring:
         default_schema: public
 
   liquibase:
-    change-log: classpath:db/migration/master.yaml
+    change-log: classpath:db/migrations/master.yaml
     enabled: true
