Add enums, controllers, and services for card and user management
This commit introduces enums for CardType, CardStatus, RoleType, and related entities, along with controllers and services for card applications, block requests, and user management. Entity classes were updated with auditing capabilities. New validation and specifications were added for improved data handling.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,7 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT}
+  servlet:
+    context-path: ${SERVER_CONTEXT_PATH}
 
 spring:
   application:
@@ -27,3 +29,9 @@ spring:
   liquibase:
     change-log: classpath:db/migrations/master.yaml
     enabled: true
+
+app:
+  encryption:
+    key: ${ENCRYPTION_KEY}
+  expiry_date: ${APP_EXPIRY_DATE}
+  rest_path: ${SERVER_CONTEXT_PATH}
