--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/>
     </parent>
     <groupId>kg.manurov</groupId>
-    <artifactId>bank-mvc</artifactId>
+    <artifactId>bankmvc</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>bank-mvc</name>
+    <name>bankmvc</name>
     <description>Bank cards management system with MVC</description>
 
     <properties>
