Refactor authorization and enhance error handling.
Removed `@PreAuthorize` annotations across controllers to centralize authorization in `SecurityConfig`, which now includes explicit role-based access rules. Improved `GlobalExceptionHandler` with descriptive responses for various exceptions, added detailed error pages, and incorporated a custom error controller. Updated OpenAPI specs and removed redundant dependencies from `pom.xml`.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,12 @@
 server:
   port: ${SERVER_PORT}
+  error:
+    whitelabel:
+      enabled: false
+    include-message: always
+    include-binding-errors: always
+    include-stacktrace: never
+    include-exception: false
 
 spring:
   application:
@@ -29,6 +36,9 @@ spring:
   liquibase:
     change-log: classpath:db/migrations/master.yaml
     enabled: true
+  web:
+    resources:
+      add-mappings: true
 
 app:
   encryption:
